Vault container works, Django apps, models, views, templates and statics, Done home page, login and signup, logout, JWT, Need better profile page and 2fa authentication, ctf page

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Ignore django cache
 src/django/*/__pycache__
+src/django/apps/*/__pycache__
+src/django/apps/*/migrations/*
+!src/django/apps/*/migrations/__init__.py
 
 # Ignore credentials
 .env
@@ -9,3 +12,6 @@ src/postgresql
 
 # Ignore SSL/TLS certificate
 src/nginx/certs
+
+# Ignore vault database
+src/vault/file
