--- a/src/django/dockerfile
+++ b/src/django/dockerfile
@@ -4,11 +4,13 @@ WORKDIR /django
 
 RUN apk update && \
     apk upgrade && \
-	apk add postgresql-client
+	apk add postgresql-client curl npm
 
 COPY . .
 
 RUN pip install -r ./requirements.txt
+
+RUN npm install jwt-decode
 
 RUN chmod +x ./entrypoint.sh
 
